# fps

./: .gitignore  Cargo.toml  asteroid_blockout.blend  asteroid_cave.blend  asteroid_cave.glb  blockout.blend  cylinder.glb  decals.xcf  emission_test.glb  hangar.glb  level_ideas  monkey_test_gun.blend  monkey_test_gun.glb  renderdoc.cap  renderdoc_counters.json  test.blend  test.glb  warehouse.glb  wierd_geometry_land.glb
animation/: Cargo.toml
animation/src/: lib.rs
blender/: alpha_utgh.blend  arena.blend  asteroid_cave.blend  bridge.blend  bush.blend  emission_test.blend  explosion.blend  hangar.blend  juggling_balls.blend  mario_kart_square.blend  mate.blend  monkey_test_gun.blend  mouse.blend  tentacle.blend  test.blend  warehouse.blend  warehouse.glb  wierd_geometry_land.blend
crates/animation/: Cargo.toml
crates/collision_octree/: Cargo.toml
crates/collision_octree/src/: lib.rs
maps/: arena.glb  asteroid_cave.glb  bush.glb  emission_test.glb  hangar.glb  level_buddy.glb  test.glb  test.glb.lighting.exr  warehouse.glb  wierd_geometry_land.glb
models/: alpha_utgh.glb  bush.glb  explosion.glb  juggling_balls.glb  mario_kart_square.glb  mate.glb  mate_gun.glb  mouse.glb  tentacle.glb  warehouse_robot.glb
shaders/: alpha_clip_model.frag  animated_model.vert  bake_lightmap.frag  bake_lightmap.vert  bake_lightvol.comp  bc6h_blit.frag  bc6h_compression.comp.hlsl  bc6h_compression_3d.comp.hlsl  blit_mipmap.frag  debug_lines.frag  debug_lines.vert  debug_lines_always.vert  debug_lines_less.vert  fxaa.frag  fxaa3_11.h  level.frag  level.vert  level_alpha_clip.frag  model.frag  model.vert  model_alpha_clip.frag  model_static.vert  model_static_gun.vert  overlay.vert  scene.frag  scene.vert  skybox.frag  skybox.vert  static_model.vert  texture_dilation.frag  tonemap.frag  transparency_compositing.frag  transparent_model.frag
shaders/.cargo/: config.toml
shaders/compiled/: alpha_clip_model.frag.spv  animated_model.vert.spv  bake_lightmap.frag.spv  bake_lightmap.vert.spv  bake_lightvol.comp.spv  bc6h_blit.frag.spv  bc6h_compression.comp.spv  bc6h_compression_3d.comp.spv  blip_mipmap.frag.spv  blit_mipmap.frag.spv  debug_lines.frag.spv  debug_lines.vert.spv  debug_lines_always.vert.spv  debug_lines_less.vert.spv  fxaa.frag.spv  level.frag.spv  level.vert.spv  level_alpha_clip.frag.spv  model.frag.spv  model.vert.spv  model_alpha_clip.frag.spv  model_animated.vert.spv  overlay.vert.spv  scene.frag.spv  scene.vert.spv  skybox.frag.spv  skybox.vert.spv  static_gun_model.vert.spv  static_model.vert.spv  texture_dilation.frag.spv  tonemap.frag.spv  transparency_compositing.frag.spv  transparent_model.frag.spv
shaders/compiled/unused/: debug_lines.vert.spv
shaders/debug_lines/: Cargo.toml
shaders/debug_lines/src/: lib.rs
shaders/model/: Cargo.toml
shaders/model/src/: lib.rs
shaders/overlay/: Cargo.toml
shaders/overlay/src/: lib.rs
shaders/skybox/: Cargo.toml
shaders/skybox/src/: lib.rs
src/: array_of_textures.rs  assets.rs  buffers.rs  ecs.rs  intersection_maths.rs  main.rs  mesh_generation.rs  renderer.rs
src/assets/: animated_model.rs
src/renderer/: debug_lines.rs  overlay.rs
texture_atlas/: Cargo.toml
texture_atlas/src/: lib.rs
textures/: pot.xcf  tree.xcf
