[package]
name = "fps"
version = "0.0.0"
authors = ["Ashley Ruglys <ashley.ruglys@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.36"
base64 = "0.13.0"
bytemuck = { version = "1.4.1", features = ["derive"] }
cgmath = "0.17.0"
env_logger = "0.8.2"
futures = "0.3.8"
gltf = { version = "0.15.2", default-features = false, features = ["utils", "names", "extras", "KHR_lights_punctual"] }
image = { version = "0.23.12", default-features = false, features = ["png"] }
legion = "0.3.1"
log = "0.4.11"
lyon_tessellation = "0.16.2"
ncollide3d = "0.26.1"
serde_json = "1.0.60"
ultraviolet = { git = "https://github.com/expenses/ultraviolet", branch = "quaternion-convertion", features = ["bytemuck"] }
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs" }
winit = "0.24.0"

animation = { path = "animation" }

# Compile all dependencies in release mode
[profile.dev.package."*"]
opt-level = 3

[workspace]
