[package]
name = "fps"
version = "0.0.0"
authors = ["Ashley Ruglys <ashley.ruglys@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0.38"
base64 = "0.13.0"
bytemuck = { version = "1.5.1", features = ["derive"] }
env_logger = "0.8.2"
gltf = { version = "0.15.2", default-features = false, features = ["utils", "names", "extras", "KHR_lights_punctual"] }
image = { version = "0.23.12", default-features = false, features = ["png"] }
legion = { version = "0.3.1", default-features = false, features = ["codegen", "parallel"] }
log = "0.4.13"
lyon_tessellation = "0.17.3"
ncollide3d = "0.27.0"
serde_json = "1.0.61"
ultraviolet = { git = "https://github.com/termhn/ultraviolet", features = ["bytemuck"] }
wgpu = { git = "https://github.com/gfx-rs/wgpu-rs", rev = "ab8b0e3766558d541206da2790dfd63f15b13bc4" }
winit = "0.24.0"
num-integer = "0.1.44"
pollster = "0.2.0"
wgpu-bc6h-compression = { git = "https://github.com/expenses/wgpu-bc6h-compression", branch = "older-wgpu", features = ["push_constants"] }

collision_octree = { path = "crates/collision_octree" }
animation = { path = "crates/animation" }

# Compile all dependencies in release mode
[profile.dev.package."*"]
opt-level = 3

[workspace]
members = [
    ".",
    "crates/animation",
    "crates/collision_octree",
]
